jsの環境をつくる

--- a/scss/pc/layout/_header.scss
+++ b/scss/pc/layout/_header.scss
@@ -21,7 +21,7 @@ nav {
     li {
         @include font-size($font-size-base);
         display: inline-block;
-        margin: 0 20px;
+        margin: 0 0 0 40px;
     }
 }
 .nav-link {
