--- a/scss/pc/style.scss
+++ b/scss/pc/style.scss
@@ -34,6 +34,7 @@
 // Project
 // -----------------------------------------------------------------
 
+@import "object/project/gallery";
 @import "object/project/top";
 
 // -----------------------------------------------------------------
